--- a/index.html
+++ b/index.html
@@ -313,13 +313,13 @@
                   <!-- first slide -->
                   <div class="carousel-item active m-0 p-0">
                     <div class="row ">
-                      <div class="col-6 d-flex justify-content-end pl-5">
+                      <div class="col-12 col-sm-6 d-flex justify-content-end pl-5">
                         <!-- iç slayt -->
                         <div class="zindex-2 d-flex ">
                           <div class="card border-0 " style="width:90%; background-color: rgba(0, 0, 0, 0);">
 
                             <div class="card-body">
-                              <h5 class="card-title font-weight-bold h2">Simple - Rock Chair</h5>
+                              <h5 class="card-title font-weight-bold h2">Simple Rock Chair</h5>
                               <p class="card-text">Semper vulputate aliquam curae condimentum <br> quisque gravida fusce
                                 convallis arcu cum at.</p>
                               <div class="zindex-2 d-flex justify-content-around mt-5">
@@ -340,7 +340,7 @@
                         </div>
                         <!-- iç slayt bitiş -->
                       </div>
-                      <div class="col-6 d-flex align-items-center"><img class="d-block w-75 h-75" id="firstslide"
+                      <div class="col-12 col-sm-6 d-flex align-items-center"><img class="img-fluid" id="firstslide"
                           src="images/slider-main-demo-1.jpg" alt="First slide"></div>
 
                     </div>
@@ -349,13 +349,13 @@
                   <!-- second slide -->
                   <div class="carousel-item">
                     <div class="row ">
-                      <div class="col-6 d-flex justify-content-end pl-5 ">
+                      <div class="col-12 col-sm-6 d-flex justify-content-end pl-5 ">
                         <!-- iç slayt -->
                         <div class="zindex-2 d-flex ">
                           <div class="card border-0" style="width:90%; background-color: rgba(0, 0, 0, 0);">
 
                             <div class="card-body">
-                              <h5 class="card-title font-weight-bold h2">Eames - Side Chair</h5>
+                              <h5 class="card-title font-weight-bold h2">Eames Side Chair</h5>
                               <h5><strong class="m-2">COLOR:</strong>
                                 <div id="s2" class="s2-color d-inline-flex" style="background-color:rgb(47,147,147)">
                                 </div>
@@ -370,7 +370,7 @@
                         </div>
                         <!-- iç slayt bitiş -->
                       </div>
-                      <div class="col-6"><img class="d-block w-75 h-75" id="secondslide"
+                      <div class="col-12 col-sm-6 d-flex align-items-center"><img class="img-fluid" id="secondslide"
                           src="images/slider-main-demo-2.jpg" alt="First slide"></div>
 
                     </div>
@@ -380,7 +380,7 @@
                   <!-- third slide -->
                   <div class="carousel-item">
                     <div class="row ">
-                      <div class="col-6 d-flex justify-content-end pl-5 ">
+                      <div class="col-12 col-sm-6 d-flex justify-content-end pl-5 ">
                         <!-- iç slayt -->
                         <div class="zindex-2 d-flex ">
                           <div class="card border-0" style="width:90%; background-color: rgba(0, 0, 0, 0);">
@@ -400,7 +400,7 @@
                         </div>
                         <!-- iç slayt bitiş -->
                       </div>
-                      <div class="col-6"><img class="d-block w-75 h-75" id="firstslide"
+                      <div class="col-12 col-sm-6 d-flex align-items-center"><img class="img-fluid" id="firstslide"
                           src="images/slider-main-demo-3.jpg" alt="First slide"></div>
 
                     </div>
