--- a/index.html
+++ b/index.html
@@ -302,7 +302,7 @@
               </div>
             </div>
             <!-- slides -->
-            <div class="col-12 ">
+            <div class="col-12 m-0 p-0">
               <div id="sliders" class="carousel slide m-0" data-ride="carousel">
                 <ol class="carousel-indicators">
                   <li data-target="#sliders" data-slide-to="0" class="active"></li>
@@ -311,16 +311,16 @@
                 </ol>
                 <div class="carousel-inner p-5">
                   <!-- first slide -->
-                  <div class="carousel-item active m-0 p-0">
+                  <div class="carousel-item active mx-0 px-0">
                     <div class="row ">
-                      <div class="col-12 col-sm-6 d-flex justify-content-end pl-5">
+                      <div class="col-12 col-sm-6 d-flex justify-content-end pl-sm-5 mx-0">
                         <!-- iç slayt -->
                         <div class="zindex-2 d-flex ">
-                          <div class="card border-0 " style="width:90%; background-color: rgba(0, 0, 0, 0);">
+                          <div class="card border-0 mx-0 px-0">
 
-                            <div class="card-body">
-                              <h5 class="card-title font-weight-bold h2">Simple Rock Chair</h5>
-                              <p class="card-text">Semper vulputate aliquam curae condimentum <br> quisque gravida fusce
+                            <div class="card-body mx-0 px-0">
+                              <h5 class="card-title font-weight-bold h2 mx-0 px-0 ">Simple Rock Chair</h5>
+                              <p class="card-text mx-0 px-0">Semper vulputate aliquam curae condimentum <br> quisque gravida fusce
                                 convallis arcu cum at.</p>
                               <div class="zindex-2 d-flex justify-content-around mt-5">
                                 <span><img id="s11" class="mr-1" src="images/slider-main-demo-1.jpg" alt="ss1"
@@ -340,37 +340,37 @@
                         </div>
                         <!-- iç slayt bitiş -->
                       </div>
-                      <div class="col-12 col-sm-6 d-flex align-items-center"><img class="img-fluid" id="firstslide"
+                      <div class="col-12 col-sm-6 d-flex align-items-center mx-0 px-0"><img class="img-fluid" id="firstslide"
                           src="images/slider-main-demo-1.jpg" alt="First slide"></div>
 
                     </div>
 
                   </div>
                   <!-- second slide -->
-                  <div class="carousel-item">
+                  <div class="carousel-item mx-0 px-0">
                     <div class="row ">
-                      <div class="col-12 col-sm-6 d-flex justify-content-end pl-5 ">
+                      <div class="col-12 col-sm-6 d-flex justify-content-end pl-sm-5 ">
                         <!-- iç slayt -->
-                        <div class="zindex-2 d-flex ">
-                          <div class="card border-0" style="width:90%; background-color: rgba(0, 0, 0, 0);">
+                        <div class="zindex-2 d-flex mx-0 px-0">
+                          <div class="card border-0 mx-0 px-0" >
 
-                            <div class="card-body">
-                              <h5 class="card-title font-weight-bold h2">Eames Side Chair</h5>
-                              <h5><strong class="m-2">COLOR:</strong>
+                            <div class="card-body mx-0 px-0">
+                              <h5 class="card-title font-weight-bold h2 mx-0 px-0">Eames Side Chair</h5>
+                              <h5><strong class="mx-0 px-0">COLOR:</strong>
                                 <div id="s2" class="s2-color d-inline-flex" style="background-color:rgb(47,147,147)">
                                 </div>
                                 <div id="s21" class="s2-color d-inline-flex" style="background-color:#CD4441"> </div>
                                 <div id="s22" class="s2-color d-inline-flex" style="background-color:#ECA141"> </div>
                               </h5>
-                              <p class="card-text">Semper vulputate aliquam curae condimentum <br> quisque gravida fusce
+                              <p class="card-text mx-0 px-0">Semper vulputate aliquam curae condimentum <br> quisque gravida fusce
                                 convallis arcu cum at.</p>
-                              <h3 class="mt-3">Only $99.99</h3>
+                              <h3 class="mt-3 mx-0 px-0">Only $99.99</h3>
                             </div>
                           </div>
                         </div>
                         <!-- iç slayt bitiş -->
                       </div>
-                      <div class="col-12 col-sm-6 d-flex align-items-center"><img class="img-fluid" id="secondslide"
+                      <div class="col-12 col-sm-6 d-flex align-items-center mx-0 px-0"><img class="img-fluid" id="secondslide"
                           src="images/slider-main-demo-2.jpg" alt="First slide"></div>
 
                     </div>
@@ -378,20 +378,20 @@
                   </div>
 
                   <!-- third slide -->
-                  <div class="carousel-item">
+                  <div class="carousel-item mx-0 px-0">
                     <div class="row ">
-                      <div class="col-12 col-sm-6 d-flex justify-content-end pl-5 ">
+                      <div class="col-12 col-sm-6 d-flex justify-content-end pl-sm-5 ">
                         <!-- iç slayt -->
-                        <div class="zindex-2 d-flex ">
-                          <div class="card border-0" style="width:90%; background-color: rgba(0, 0, 0, 0);">
+                        <div class="zindex-2 d-flex mx-0 px-0">
+                          <div class="card border-0 mx-0 px-0">
 
-                            <div class="card-body text-center">
-                              <h5 class="text-muted">CAPPELLINI</h5>
-                              <h5 class="card-title font-weight-bold h2">Wooden Lounge Chairs</h5>
-                              <p class="card-text">Semper vulputate aliquam curae entum
+                            <div class="card-body text-center mx-0 px-0">
+                              <h5 class="text-muted mx-0 px-0">CAPPELLINI</h5>
+                              <h5 class="card-title font-weight-bold h2 mx-0 px-0">Wooden Lounge Chairs</h5>
+                              <p class="card-text mx-0 px-0">Semper vulputate aliquam curae entum
                                 quisque gravida fusce cum at</p>
-                              <div class="zindex-2 d-flex justify-content-around">
-                                <h3 class="mt-3 text-woy">Only $999.99</h3>
+                              <div class="zindex-2 d-flex justify-content-around mx-0 px-0">
+                                <h3 class="mt-3 text-woy mx-0 px-0">Only $999.99</h3>
 
                               </div>
 
@@ -400,7 +400,7 @@
                         </div>
                         <!-- iç slayt bitiş -->
                       </div>
-                      <div class="col-12 col-sm-6 d-flex align-items-center"><img class="img-fluid" id="firstslide"
+                      <div class="col-12 col-sm-6 d-flex align-items-center mx-0 px-0"><img class="img-fluid" id="firstslide"
                           src="images/slider-main-demo-3.jpg" alt="First slide"></div>
 
                     </div>
