--- a/index.html
+++ b/index.html
@@ -126,7 +126,7 @@
                 <div class="row">
                   <div class="col">
                     <div class="list-group" id="list-tab" role="tablist">
-                      <div class="accordion" id="manu-home">
+                      <div class="accordion m-0 p-0" id="manu-home">
                         <div class="card">
                             <div class="mb-0 d-flex justify-content-around">
                               <a class="list-group-item list-group-item-action d-inline">HOME</a>
@@ -137,8 +137,8 @@
 
                       
                           <div id="collapseOne" class="collapse"  data-parent="#manu-home">
-                            <div class="card-body">
-                              <div class="list-group" id="list-tab" role="tablist">
+                            <div class="card-body m-0 p-0">
+                              <div class="list-group " id="list-tab" role="tablist">
                                 <a class="list-group-item list-group-item-action d-inline">Demo Medical Marijuana</a>
                                 <a class="list-group-item list-group-item-action d-inline">Demo Fashion Minimalism</a>
                                 <a class="list-group-item list-group-item-action d-inline">Demo Drinks</a>
