--- a/index.html
+++ b/index.html
@@ -129,7 +129,7 @@
                       <div class="accordion m-0 p-0" id="manu-home">
                         <div class="card border-0">
                             <div class="mb-0 d-flex justify-content-around border-0">
-                              <a class="list-group-item list-group-item-action d-inline">HOME</a>
+                              <a class="list-group-item list-group-item-action d-inline border-0">HOME</a>
                               <button class=" green btn  d-inline text-left"  data-toggle="collapse" data-target="#collapseOne">
                                 <i class="fas fa-angle-down"></i>
                               </button>
@@ -162,7 +162,7 @@
                       <div class="accordion" id="manu-page">
                         <div class="card border-0">
                             <div class="mb-0 d-flex justify-content-around">
-                              <a class="list-group-item list-group-item-action d-inline">PAGES</a>
+                              <a class="list-group-item list-group-item-action d-inline border-0">PAGES</a>
                               <button class="green btn  d-inline text-left"  data-toggle="collapse" data-target="#collapsetw0">
                                 <i class="fas fa-angle-down"></i>
                               </button>
