--- a/index.html
+++ b/index.html
@@ -175,7 +175,7 @@
                                 <div class="accordion m-0 p-0 border-0" id="manu-prepage">
                                   <div class="card border-0">
                                       <div class="mb-0 d-flex justify-content-around">
-                                        <a class="list-group-item list-group-item-action d-inline">Pre-build Pages</a>
+                                        <a class="list-group-item list-group-item-action d-inline border-0">Pre-build Pages</a>
                                         <button class=" green btn  d-inline text-left"  data-toggle="collapse" data-target="#collapseTwo1">
                                           <i class="fas fa-angle-down"></i>
                                         </button>
